<resources>
    <string name="app_name">FitApp</string>
    <string name="nav_home">Strona główna</string>
    <string name="nav_journal">Dziennik</string>
    <string name="nav_me">Profil</string>
    <string name="nav_goals">Cele</string>
    <string name="nav_export">Eksport danych</string>
    <string name="nav_about">O nas</string>
    <string name="nav_settings">Ustawienia</string>
    <string name="nav_logOut">Wyloguj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activityLevel">Poziom aktywności:</string>
    <string name="OPERATIONS_URL">http://fitappliaction.cba.pl/operations.php</string>
    <string name="LOGIN_URL">http://fitappliaction.cba.pl/login.php</string>
    <string name="REGISTER_URL">http://fitappliaction.cba.pl/register.php</string>
    <string name="kcal"> kcal</string>
    <string name="g"> g</string>
    <string name="day">Dzień</string>
    <string name="test">Test</string>
    <string name="message">message</string>
    <string name="comunicat1">"Dane ćwiczenie zostało już dodane w tym dniu"</string>
    <string name="addError">Błąd podczas dodawania </string>
    <string name="formatDate">yyyy-MM-dd</string>
    <string name="comunicat2">Dany składnik został już dodany w tej porze jedzenia</string>
    <string name="comunicat3">Dany posiłek został już dodany w tej porze jedzenia</string>
    <string name="empty"> </string>
    <string name="comunical4">Dany trening został już dodany w tym dniu</string>
    <string name="eraseError">Błąd podczas usuwania </string>
    <string name="exerciseError">"Wystąpił błąd podczas pobierania ćwiczeń"</string>
    <string name="connectionError">Błąd połączenia z bazą</string>
    <string name="wrongDataComunicat">Błędne dane</string>
    <string name="registerError">Nieoczekiwany błąd rejestracji</string>
    <string name="usernameError">Nazwa użytkownika jest zajęta</string>
    <string name="emailError">E-mail jest zajęty</string>
    <string name="saveChangeError">Nieoczkiwany błąd, powtórz wcześniej wprowadzone zmiany</string>
    <string name="unexpectedError">Nieoczekiwany błąd</string>
    <string name="downloadWeightError">Błąd podczas pobierania wagi z dnia</string>
    <string name="fillSeriesError">Wpisz liczbę serii!</string>
    <string name="fillRepetiotionsError">Wpisz liczbę powtórzeń!</string>
    <string name="fillWeightError">Wpisz wagę!</string>
    <string name="comunicat5">Usuń posiłek z sekcji \'Śniadanie\'</string>
    <string name="comunicat6">Usuń produkt z sekcji \'Śniadanie\'</string>
    <string name="comunicat7">Usuń ćwiczenie</string>
    <string name="comunicat8">Usuń trening</string>
    <string name="toSumUp">Podsumowanie</string>
    <string name="toSumUpDays">Podsumowanie z dni:</string>
    <string name="date">Data</string>
    <string name="goal2">Cel</string>
    <string name="lose2">Utrata wagi</string>
    <string name="gain2">Przybranie wagi</string>
    <string name="keep2">Utrzymanie wagi</string>
    <string name="lackOfData">Brak danych</string>
    <string name="ingredientOrMeal">Składnik / posiłek</string>
    <string name="repetitions2">Powtórzenia</string>
    <string name="series2">Serie</string>
    <string name="exercisesOrTraining">Ćwiczenie / trening</string>
    <string name="eaten">Zjedzone</string>
    <string name="min">Minimum</string>
    <string name="max">Maksimum</string>
    <string name="generateToFile">Wygenerowanie plik do: </string>
    <string name="lackOfPermitions">Brak uprawnień, spróbuj jeszcze raz</string>
    <string name="dash">-</string>
    <string name="dash2"> - </string>
    <string name="successAdd">Dodano pomyślnie</string>
    <string name="ingredients2">Składniki</string>
    <string name="training2">Treningi</string>
    <string name="selectAny">Wybierz którąś z opcji</string>
    <string name="fillWeight">Uzupełnij pole \'Masa ciała\'</string>
    <string name="updateData">Dane zaaktualizowane</string>
    <string name="successDelete">Pomyślnie usunięto</string>
    <string name="fillLogin">Wprowadź login</string>
    <string name="reqLogin">Login musi mieć conajmniej 6 znaków</string>
    <string name="fillEmail">Wprowadź e-mail</string>
    <string name="fillPassword">Wprowadź hasło</string>
    <string name="notSamePassword">Hasła się różnią</string>
    <string name="reqPassword">Hasło musi mieć conajmniej 6 znaków</string>
    <string name="successChange">Dane zmienione pomyślnie</string>
    <string name="openMe">openMeFragment</string>
    <string name="successLogOut">Wylogowano pomyślnie</string>
    <string name="fillAge">Wprowadź swój wiek</string>
    <string name="fillHeight">Wprowadź swój wzrost</string>
    <string name="welcomeInApp">Jesteś nowym użytkownikiem! Zaloguj się do serwisu!</string>
    <string name="successLogIn">Zalogowano pomyślnie</string>
    <string name="enterTrainingName">Wpisz nazwę treningu</string>
    <string name="addExercisesToTraining">Najpierw dodaj ćwiczenia do treningu</string>
    <string name="trainingAdded">Dodano trening</string>
    <string name="enterMealName">Wpisz nazwę posiłku</string>
    <string name="addIngredientsToMeal">Najpierw dodaj składniki do posiłku</string>
    <string name="mealAdded">Dodano posiłek</string>
    <string name="excelName">excel.xls</string>
    <string name="userExtra">user</string>
    <string name="mealTimeExtra">mealTime</string>
    <string name="trainingNameExtra">trainingName</string>
    <string name="mealNameExtra">mealName</string>
    <string name="action">action</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="firstPartMealSelected">1/2 Wybranie nazwy posiłku</string>
    <string name="secondPartMealSelected">2/2 Dodawanie składników</string>
    <string name="setNameYourMeal">Nazwij swój posiłek, np.: "Kanapka z serem", "Kurczak z ryżem"</string>
    <string name="nameOfMeal">Nazwa posiłku</string>
    <string name="add">Dodaj</string>
    <string name="calories">Kalorie: </string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="reqCalorie">9999</string>
    <string name="carbohydrates">Węgl.: </string>
    <string name="floatZero">0.0</string>
    <string name="reqMinerals">999-999</string>
    <string name="protein">Białko: </string>
    <string name="fat">Tłuszcz: </string>
    <string name="selectedIngredients">Wybrane składniki (</string>
    <string name="selectedIngredients2">) do posiłku:</string>
    <string name="toChooseIngredients">Składniki do wyboru:</string>
    <string name="firstPartTrainingSelected">1/2 Wybranie nazwy treningu</string>
    <string name="setNameYourTraining">Nazwij swój trening, np.: "FBW", "Push-pull", "Cardio"</string>
    <string name="nameOfTraining">Nazwa treningu</string>
    <string name="secondPartTrainingSelected">2/2 Dodawanie ćwiczeń</string>
    <string name="selectedExercises">Wybrane ćwiczenia (</string>
    <string name="selectedExercises2">) do treningu:</string>
    <string name="toChooseExercises">Ćwiczenia do wyboru:</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="e_mail">E-mail</string>
    <string name="sex">Płeć:</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="weight">Waga:</string>
    <string name="height">Wzrost:</string>
    <string name="age">Wiek:</string>
    <string name="goal">Cel wagi:</string>
    <string name="lose">Utrata</string>
    <string name="keep">Utrzymanie</string>
    <string name="gain">Przybranie</string>
    <string name="caloricDemand">Zapotrzebowanie:</string>
    <string name="count">Oblicz</string>
    <string name="register">Zarejestruj</string>
    <string name="logIn">Zaloguj</string>
    <string name="adding">Dodawanie: </string>
    <string name="nameOfTraining2">nazwa treningu</string>
    <string name="exercises">Ćwiczenia (</string>
    <string name="closeBracket">):</string>
    <string name="fillSeriesAndRepetitions">Wpisz serie i liczbę powtórzeń</string>
    <string name="nameOfExercise">nazwa ćwiczenia</string>
    <string name="series">Serie:</string>
    <string name="Repetitions">Powtórzenia:</string>
    <string name="nameOfProductOrMeal">Nazwa produktu/posiłku</string>
    <string name="in100g">w 100g:</string>
    <string name="inWholeMeal">w całym posiłku (</string>
    <string name="mealWeight">waga posiłku</string>
    <string name="ingredients_colon">Składniki:</string>
    <string name="ingredients">Składniki</string>
    <string name="erase">Usuń</string>
    <string name="openBracket"> (</string>
    <string name="exercises2">Ćwiczenia</string>
    <string name="nameOfExercisesOrTraining">Nazwa ćwiczenia/treningu</string>
    <string name="fillProductWeight">Wpisz wagę produktu</string>
    <string name="fillMealWeight">Wpisz wagę posiłku</string>
    <string name="nameOfProduct">nazwa produktu</string>
    <string name="describeOfApp">Projekt stworzony na potrzby projektu z przedmiotu "Programowanie zdarzeniowe" ®</string>
    <string name="authors">Twórcy: Marcel Fituch i Mikołaj Gregorczyk</string>
    <string name="selectExerciseToAdd">Wybierz ćwiczenie, które chcesz dodać, a następnie podaj liczbę serii i powtórzeń.</string>
    <string name="selectIngredientToAdd">Wybierz składnik, który chcesz dodać, a nastepnie wybierz wagę.</string>
    <string name="selectMealToAdd">Wybierz posiłek, który chcesz dodać, a nastepnie wybierz wagę.</string>
    <string name="selectTrainingToAdd">Wybierz trening, który chcesz dodać.</string>
    <string name="infoExporting">Eksportowanie szczegółowych danych z ostatniego tygodnia do pliku Excel</string>
    <string name="selectingData">Wybór danych:</string>
    <string name="breakfast">Śniadanie</string>
    <string name="secondBreakfast">Drugie śniadanie</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Obiad</string>
    <string name="snack">Przekąska</string>
    <string name="supper">Kolacja</string>
    <string name="training">Trening</string>
    <string name="toSumUpDay">Podsumowanie dnia</string>
    <string name="create">Wygeneruj</string>
    <string name="editData">Edycja danych:</string>
    <string name="bodyWeight">Masa ciała :</string>
    <string name="save">Zapisz</string>
    <string name="floatZeroG">0.0 g</string>
    <string name="zeroKcal">0 kcal</string>
    <string name="numberOfExercises">Liczba ćwiczeń: </string>
    <string name="toSumUpLastWeek">Podsumowanie ostatniego tygodnia</string>
    <string name="calories2">Kalorie</string>
    <string name="carbohydrates2">Węglowodany</string>
    <string name="protein2">Białko</string>
    <string name="fat2">Tłuszcze</string>
    <string name="weight2">Waga</string>
    <string name="selectDate">wybierz datę</string>
    <string name="dayWeight">Waga w tym dniu:</string>
    <string name="myMeals">Moje posiłki</string>
    <string name="mealNotAdd">Nie dodałeś jeszcze żadnych posiłków</string>
    <string name="myTrainings">Moje treningi</string>
    <string name="currentData">Obecne dane:</string>
    <string name="login2">Login: </string>
    <string name="e_mail2">E-mail: </string>
    <string name="fillNewLogin">Wpisz nowy login</string>
    <string name="changeLogin">Zmień login</string>
    <string name="fillNewE_mail">Wpisz nowy e-mail</string>
    <string name="changeE_mail">Zmień e-mail</string>
    <string name="fillNewPassword">Wpisz nowe hasło</string>
    <string name="confirmNewPassword">Potwierdź nowe hasło</string>
    <string name="changePassword">Zmień hasło</string>
    <string name="zeroG">0g</string>
    <string name="in">w </string>
    <string name="next">dalej</string>
    <string name="colon">:</string>
    <string name="name">Nazwa</string>
    <string name="line">|</string>
</resources>