<?xml version="1.0" encoding="utf-8"?>
<tools:menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nagivation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/drawer_journal"
            android:icon="@drawable/baseline_import_contacts_black_24dp"
            android:title="@string/nav_journal" />
        <item
            android:id="@+id/drawer_me"
            android:icon="@drawable/baseline_person_black_24dp"
            android:title="@string/nav_me" />
        <item
            android:id="@+id/drawer_goals"
            android:icon="@drawable/baseline_grade_black_24dp"
            android:title="@string/nav_goals" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/baseline_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/drawer_export"
            android:icon="@drawable/baseline_subdirectory_arrow_right_black_24dp"
            android:title="@string/nav_export" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/baseline_supervised_user_circle_black_18dp"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/baseline_power_settings_new_black_24dp"
            android:title="@string/nav_logOut" />
    </group>

</tools:menu>