<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currentData"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login2" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail2" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail" />
    </LinearLayout>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/fillNewLogin"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bChangeLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_next"
        android:text="@string/changeLogin"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/fillNewE_mail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/bChangeEmail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_next"
        android:text="@string/changeE_mail"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/fillNewPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmNewPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bChangePassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_next"
        android:text="@string/changePassword"
        android:textColor="@color/colorWhite" />

</LinearLayout>